--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .dart_tool/
 .packages
 .pub/
+。git/
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
